[package]
name = "file-seq"
version = "0.2.0"
authors = ["Jonas Trevisan <jonas.trevisa@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["sequence", "file-sequence"]
categories = ["filesystem"]
repository = "https://github.com/jonhkr/rust-file-seq"
description = "Fail-safe file sequence that uses the file system as store"
readme = "README.md"
exclude = [
  "file-seq.iml",
  ".github"
]

[dependencies]
log = "0.4.11"

[dev-dependencies]
rand = "0.7.3"
